examples/test/testpolicy14159.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14159
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key42: value44
      key20: value24
      key1: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value18
      podSelector:
        matchLabels:
          key19: value27
          key37: value26
